2005-04-08 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb, misc/theme_convert/theme_convert.rb:
	  remove using ERbLight. (only support ruby 1.8 or later.)
	* erb/*: delete.
	* skel/conf.rhtml, plugin/00default.rb: fix theme to 'default' in configuration mode.

2005-04-06 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defailtio.rb: support ruby 1.9 HEAD. thanks Mineo Aoki <aamine at loveruby.net>.
	* tdiary/defailtio.rb: through NameError in restore.

2005-03-09 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add mobile user agents; 'Vodafone' and 'MOT-'.
	  thanks Masaru Yokoi <masaru at masaru.org>
	* skel/i.update.rhtml: fix HTML tag typo. thanks Masaru Yokoi <masaru at masaru.org>

2005-01-27 zunda <zunda at freeshell.org>
	* skel/i.update.rhtml: bug fix - Kanji code converted from shift-jis to euc
	* skel/i.month.rhtml: use labels from plugin for i18n

2005-01-12  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/defaultio.rb: separate each transaction and use exclusive
	lock in writing transaction only.

2004-12-22 zunda <zunda at freeshell.org>
	* misc/style/emptdiary/emptdiary_style.rb: body_to_html defined, thanks to dai <d+r at vdr.jp>.

2004-12-01 zunda <zunda at freeshell.org>
	* skel/tdiary.rconf: bug fix - could not saveconf unless icon and description are set

2004-12-01 zunda <zunda at freeshell.org>
	* plugin/00default.rb, plugin/ja/00default.rb: added icon_tag and description_tag

2004-11-29 zunda <zunda at freeshell.org>
	* tdiary.rb, skel/tdiary.rconf, plugin/00default.rb, plugin/{ja,en,zh}/00default.rb:
	  added @conf.icon and @conf.description

2004-11-05 MoonWolf <moonwolf@moonwolf.com>
	* tdiary/tdiary_style.rb: XML-RPC API support
	* misc/style/emptdiary: XML-RPC API support
	* misc/style/etdiary: XML-RPC API support
	* misc/style/rd: XML-RPC API support
	* misc/style/wiki: XML-RPC API support

2004-11-04 MoonWolf <moonwolf@moonwolf.com>
	* tdiary.rb: method visibility change.

2004-09-24 Fri UECHI Yasumasa <uechi@potaway.net>